--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-dompdf": "^1.0",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.0",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "^6.0",
+        "mailgun/mailgun-php": "~1.7.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
